--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Client-side Code Runner (Pyodide + JS)</title>
+  <title>線上編程工具模擬器</title>
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="styles.css">
 </head>
