--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
   <title>線上編程工具模擬器</title>
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="styles.css">
+
+  <style>
+    /* 普通輸出框樣式 */
+    .output {
+      background-color: #ffffff;   /* 白底 */
+      color: #000000;              /* 黑字 */
+      padding: 10px;
+      border: 1px solid #ccc;      /* 淺灰邊框 */
+      border-radius: 4px;
+      font-family: Consolas, "Courier New", monospace;
+      white-space: pre-wrap;       /* 保留換行 */
+      overflow-y: auto;            /* 超出可垂直滾動 */
+    }
+  </style>
 </head>
 <body>
   <main class="container">
