--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <title>簡易聊天室 (Demo)</title>
+  <title>簡易聊天室 </title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
     body { font-family: 'Helvetica Neue', 'Microsoft JhengHei', sans-serif; background: #e7f3fa; margin:0;}
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body>
-  <h1>☁️ 團隊聊天室 Demo</h1>
+  <h1>☁️ 團隊聊天室 </h1>
   <div class="wrapper">
     <div class="login" id="login-panel">
       <h2>登入 / 註冊</h2>
